<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableLayout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/purple">



    <androidx.cardview.widget.CardView
        android:layout_width="367dp"
        android:layout_height="400dp"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="370dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#ECE6E7"
            android:transitionGroup="false">


            <TextView
                android:id="@+id/txt_payment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/txtPayment"
                android:text="Payment"
                android:textAlignment="center"
                android:textColor="#D8D0D0"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.093" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/teal_200"
                android:hint="@string/btnNext"
                android:text="Next"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <SearchView
                android:id="@+id/serch_payType"
                android:layout_width="285dp"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:backgroundTint="#D8D0D0"
                android:drawablePadding="8dp"
                android:queryHint="@string/serchPayType"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.188"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </SearchView>

            <TextView
                android:id="@+id/txt_cardType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="@string/txtCardType"
                android:text="Select Card Type"
                android:textColor="#D8D0D0"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.073"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.265" />

            <ImageView
                android:id="@+id/img_cardType"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.952"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.501"
                app:srcCompat="@drawable/baseline_credit_card" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>