<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableLayout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/purple">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="367dp"
        android:layout_height="400dp"
        android:layout_margin="30dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="370dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#ECE6E7"
            android:transitionGroup="false">


            <TextView
                android:id="@+id/txt_payment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Payment"
                android:textAlignment="center"
                android:textColor="#D8D0D0"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.093" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/teal_200"
                android:hint="@string/btnSubmit"
                android:text="submit"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <EditText
                android:id="@+id/input_cardNum"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="92dp"
                android:background="@drawable/custom_edittext"
                android:backgroundTint="#D8D0D0"
                android:drawablePadding="8dp"
                android:hint="@string/inputOTP"
                android:inputType="number"
                android:padding="8dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/btn_next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.177"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_payment"
                app:layout_constraintVertical_bias="0.03" />

            <Button
                android:id="@+id/btn_otp"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:backgroundTint="#878A8A"
                android:hint="@string/btnOTP"
                android:text="Request OTP"
                android:textSize="16sp"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.868"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>