<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableLayout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/purple">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="367dp"
        android:layout_height="400dp"
        android:layout_margin="30dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="370dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#ECE6E7"
            android:transitionGroup="false">

            <TextView
                android:id="@+id/txt_payment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/txtPayment"
                android:text="Payment"
                android:textAlignment="center"
                android:textColor="#D8D0D0"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/input_cardNum"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/input_cardNum"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_edittext"
                android:backgroundTint="#D8D0D0"
                android:drawablePadding="8dp"
                android:hint="@string/inputCardNum"
                android:inputType="number"
                android:padding="8dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_payment" />


            <EditText
                android:id="@+id/input_name"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:backgroundTint="#D8D0D0"
                android:drawablePadding="8dp"
                android:hint="@string/inputName"
                android:padding="8dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_cardNum" />

            <EditText
                android:id="@+id/input_date"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:backgroundTint="#D8D0D0"
                android:baselineAligned="false"
                android:drawablePadding="8dp"
                android:hint="@string/inputDate"
                android:inputType="date"
                android:padding="8dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.129"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_name" />

            <EditText
                android:id="@+id/input_cvv"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:backgroundTint="#D8D0D0"
                android:baselineAligned="false"
                android:drawablePadding="8dp"
                android:hint="CVV"
                android:inputType="number"
                android:padding="8dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.36"
                app:layout_constraintStart_toEndOf="@+id/input_date"
                app:layout_constraintTop_toBottomOf="@+id/input_name" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/teal_200"
                android:hint="@string/btnNext"
                android:text="Next"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_date" />

            <ImageView
                android:id="@+id/img_date"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintBottom_toBottomOf="@+id/input_date"
                app:layout_constraintEnd_toEndOf="@+id/input_date"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/input_date"
                app:layout_constraintTop_toTopOf="@+id/input_date"
                app:layout_constraintVertical_bias="0.47"
                app:srcCompat="@drawable/baseline_date" />

            <ImageView
                android:id="@+id/img_name"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="250dp"
                app:layout_constraintBottom_toBottomOf="@+id/input_name"
                app:layout_constraintEnd_toEndOf="@+id/input_name"
                app:layout_constraintStart_toStartOf="@+id/input_name"
                app:layout_constraintTop_toTopOf="@+id/input_name"
                app:srcCompat="@drawable/baseline_supervised_user_circle" />

            <ImageView
                android:id="@+id/img_cardType"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:layout_constraintBottom_toBottomOf="@+id/input_cardNum"
                app:layout_constraintEnd_toEndOf="@+id/input_cardNum"
                app:layout_constraintHorizontal_bias="0.969"
                app:layout_constraintStart_toStartOf="@+id/input_cardNum"
                app:layout_constraintTop_toTopOf="@+id/input_cardNum"
                app:layout_constraintVertical_bias="0.466"
                app:srcCompat="@drawable/baseline_credit_card" />

            <ImageView
                android:id="@+id/img_cvv"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:layout_constraintBottom_toBottomOf="@+id/input_cvv"
                app:layout_constraintEnd_toEndOf="@+id/input_cvv"
                app:layout_constraintHorizontal_bias="0.921"
                app:layout_constraintStart_toStartOf="@+id/input_cvv"
                app:layout_constraintTop_toTopOf="@+id/input_cvv"
                app:layout_constraintVertical_bias="0.266"
                app:srcCompat="@drawable/baseline_key_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>